.provarCaches/00D410000011HE0EAM/objects/rstkf__glbankacct__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glbankacct</customHelpPage>
    <description>glbankacct__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glbankacct_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;_&apos; &amp;   UPPER(rstkf__glbankacct_number__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glbankacct_name__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_allcurrencies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In a multi-currency implementation, this field indicates that this bank account can transact in any/all currencies.</inlineHelpText>
        <label>Transact in All Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_amtbank__c</fullName>
        <formula>rstkf__glbankacct_drbank__c  -  rstkf__glbankacct_crbank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Bank Account Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_amthome__c</fullName>
        <formula>rstkf__glbankacct_drhome__c  -  rstkf__glbankacct_crhome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_apacheftfeestr__c</fullName>
        <description>AP ACH/EFT Fees</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to AP ACH/EFT Fees.</inlineHelpText>
        <label>AP ACH/EFT Fees</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_apachstr__c</fullName>
        <description>AP ACH Payment</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to AP ACH Payment.</inlineHelpText>
        <label>AP ACH Payment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_apchkstr__c</fullName>
        <description>AP Check</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to AP Check.</inlineHelpText>
        <label>AP Check</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_apeftstr__c</fullName>
        <description>AP EFT Payment (General)</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to AP EFT Payment (General).</inlineHelpText>
        <label>AP EFT Payment (General)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_aracheftstr__c</fullName>
        <description>AR ACH/EFT Deposit</description>
        <inlineHelpText>AR ACH/EFT Payment Reported by Bank Translation String</inlineHelpText>
        <label>AR ACH/EFT Deposit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_ardepstr__c</fullName>
        <description>AR Cash Deposit</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to AR Cash Deposit.</inlineHelpText>
        <label>AR Cash Deposit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_bankcardacct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Card Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_bic__c</fullName>
        <description>glbankacct_bic__c</description>
        <inlineHelpText>The SWIFT Address (also known as BIC code) is assigned to a bank to send automated payments quickly and accurately from and to the banks concerned.  It uniquely identifies the name and country, (and sometimes the branch) of the bank involved.</inlineHelpText>
        <label>Business Identifier Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_branch__c</fullName>
        <label>Bank Account Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_cashapplind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash  Withdrawals Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_ccapplind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Withdrawals Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_ccdepstr__c</fullName>
        <description>AR Credit Card Deposit</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Bank Reports Credit Card Deposit.</inlineHelpText>
        <label>AR Credit Card Deposit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_ccfeestr__c</fullName>
        <description>Credit Card Processing Fee</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Credit Card Processing Fee.</inlineHelpText>
        <label>Credit Card Processing Fee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_checkapplind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checking Account  Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_checkprinttempl__c</fullName>
        <label>Check Print Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_citystate__c</fullName>
        <label>Branch City &amp; State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>glbankaccts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_crbank__c</fullName>
        <label>Bank Currency Credit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankcr__c</summarizedField>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_crhome__c</fullName>
        <label>Home Currency Credit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_homecr__c</summarizedField>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_curr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>glbankaccts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_currencies__c</fullName>
        <inlineHelpText>In a multi-currency implementation, this field carries the currencies (other than the bank currency) that can be transacted using this bank account.</inlineHelpText>
        <label>Transactional Currencies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>DZD</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>FJD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HNL</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_currfirstchk__c</fullName>
        <label>Current First Valid Check Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_currlastchk__c</fullName>
        <label>Current Last Valid Check Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_currsupport__c</fullName>
        <description>glbankacct_currsupport</description>
        <inlineHelpText>In a multi-currency implementation, this field carries the currencies (other than the bank currency) that can be transacted using this bank account.</inlineHelpText>
        <label>Transactional Currencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_depositbankcr__c</fullName>
        <description>Bank Deposit Credit</description>
        <label>Bank Deposit Credit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankcr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>AR Cash Deposit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_depositbankdr__c</fullName>
        <description>Bank Deposit Debit</description>
        <label>Bank Deposit Debit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankdr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>AR Cash Deposit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_drbank__c</fullName>
        <label>Bank Currency Debit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankdr__c</summarizedField>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_drhome__c</fullName>
        <label>Home Currency Debit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_homedr__c</summarizedField>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_eftapplind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFT  Withdrawals Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_feesrvchgstr__c</fullName>
        <description>Bank Fees/Service Charges</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Bank Fees/Service Charges.</inlineHelpText>
        <label>Bank Fees/Service Charges</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Associated GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>glbankaccts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_howreconciled__c</fullName>
        <description>Reconciliation Method</description>
        <inlineHelpText>Reconciliation Method</inlineHelpText>
        <label>Reconciliation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                    <isActive>false</isActive>
                    <label>-</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_iban__c</fullName>
        <description>glbankacct_iban__c</description>
        <inlineHelpText>The field holds the International Bank Account Number(IBAN) for this Bank Account.  The IBAN is a number assigned to all accounts in the EU countries (etc.)</inlineHelpText>
        <label>International Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_idden__c</fullName>
        <label>Bank ID Denominator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_idnum__c</fullName>
        <label>Bank ID Numerator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_institution__c</fullName>
        <label>Institution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_intexpfeestr__c</fullName>
        <description>Interest Expense</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Interest Expense.</inlineHelpText>
        <label>Interest Expense</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_intincstr__c</fullName>
        <description>Interest Income</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Interest Income.</inlineHelpText>
        <label>Interest Income</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_jbfbankno__c</fullName>
        <description>glbankacct_jbfbankno__c</description>
        <inlineHelpText>This field carries the Remitting Bank Number for this bank account used in the Payment  Session Japanese Bank Export process.</inlineHelpText>
        <label>JBF – Remitting Bank Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_jbfbranchno__c</fullName>
        <description>glbankacct_jbfbranchno__c</description>
        <inlineHelpText>This field carries the Remitting Branch Number for this bank account used in the Payment  Session Japanese Bank Export process.</inlineHelpText>
        <label>JBF – Remitting Branch Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_jbfeftrqstid__c</fullName>
        <description>glbankacct_jbfeftrqstid__c</description>
        <inlineHelpText>This field carries the EFT Requestor ID for this bank account used in the Payment  Session Japanese Bank Export process.</inlineHelpText>
        <label>JBF – EFT Requestor ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_jexferstr__c</fullName>
        <description>Transfers/Adjustments Made by JE</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to Transfers/Adjustments Made by JE</inlineHelpText>
        <label>Transfers/Adjustments Made by JE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_lstchecknumb__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Check Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_maskednumber__c</fullName>
        <label>Bank Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_name__c</fullName>
        <label>Bank Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_number__c</fullName>
        <label>Bank Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_othradjstr1__c</fullName>
        <description>All Other Adjustments</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to All Other Adjustments</inlineHelpText>
        <label>All Other Adjustments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_othradjstr2__c</fullName>
        <description>All Other Adjustments</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to All Other Adjustments.</inlineHelpText>
        <label>All Other Adjustments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_othradjstr3__c</fullName>
        <description>All Other Adjustments</description>
        <inlineHelpText>When this string of characters appears in the BRATO Transaction Type field of an uploaded BRATO record, the Transaction Type field is reset to All Other Adjustments.</inlineHelpText>
        <label>All Other Adjustments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_paymentbankcr__c</fullName>
        <description>Bank Payment Credit</description>
        <label>Bank Payment Credit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankcr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>AP Check, AP Cash Payment, AP EFT Payment (General), AP ACH Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_paymentbankdr__c</fullName>
        <description>Bank Payment Debit</description>
        <label>Bank Payment Debit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankdr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>AP Check, AP Cash Payment, AP EFT Payment (General), AP ACH Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_povendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Company</description>
        <inlineHelpText>Vendor Company</inlineHelpText>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_recontxntype__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this indicator field is set, the restriction requiring the Transaction Type on the Statement Transaction to match that on the System Transaction when doing a manual reconciliation is removed.</inlineHelpText>
        <label>No Statement Recon Txn Type Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_routing__c</fullName>
        <label>Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_sepa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glbankacct_sepa__c</description>
        <inlineHelpText>This field activates the creation of a SEPA formatted XML file as part of the posting of Payment Selection Session batches generated for this Bank Account.  (Only EFT transactions are included.)</inlineHelpText>
        <label>Create Payment Session SEPA XML File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_sepaformat__c</fullName>
        <description>glbankacct_sepaformat__c</description>
        <inlineHelpText>When the SEPA Export feature is enabled, this field controls the country standards that will be used when creating the XML file.</inlineHelpText>
        <label>SEPA XML File Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Format EU</fullName>
                </value>
                <value>
                    <fullName>Standard Format DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_transferbankcr__c</fullName>
        <description>Bank Transfer Credit</description>
        <label>Bank Transfer Credit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankcr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>Transfers/Adjustments Made by JE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_transferbankdr__c</fullName>
        <description>Bank Transfer Debit</description>
        <label>Bank Transfer Debit</label>
        <summarizedField>rstkf__glbanktxn__c.rstkf__glbanktxn_bankdr__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>Transfers/Adjustments Made by JE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glbanktxn__c.rstkf__glbanktxn_reconciled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbanktxn__c.rstkf__glbanktxn_glbankacct__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_unclrddepbeg__c</fullName>
        <formula>rstkf__glbankacct_depositbankdr__c  -  rstkf__glbankacct_depositbankcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncleared Deposits at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_unclrdpaybeg__c</fullName>
        <formula>rstkf__glbankacct_paymentbankdr__c  -  rstkf__glbankacct_paymentbankcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncleared Payments at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacct_unclrdxferbeg__c</fullName>
        <formula>rstkf__glbankacct_transferbankdr__c  -  rstkf__glbankacct_transferbankcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncleared Transfers at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>Bank_Accounts_Company_100</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankacct_cmpno__c</columns>
        <columns>rstkf__glbankacct_name__c</columns>
        <columns>rstkf__glbankacct_number__c</columns>
        <columns>rstkf__glbankacct_bankcardacct__c</columns>
        <columns>rstkf__glbankacct_howreconciled__c</columns>
        <columns>rstkf__glbankacct_curr__c</columns>
        <columns>rstkf__glbankacct_amthome__c</columns>
        <columns>rstkf__glbankacct_lstchecknumb__c</columns>
        <columns>rstkf__glbankacct_glacct__c</columns>
        <columns>rstkf__glbankacct_ccapplind__c</columns>
        <columns>rstkf__glbankacct_cashapplind__c</columns>
        <columns>rstkf__glbankacct_eftapplind__c</columns>
        <columns>rstkf__glbankacct_checkapplind__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbankacct_cmpno__c</field>
            <operation>contains</operation>
            <value>100</value>
        </filters>
        <label>Bank Accounts - Company 100</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__P_View</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankacct_cmpno__c</columns>
        <columns>rstkf__glbankacct_name__c</columns>
        <columns>rstkf__glbankacct_amthome__c</columns>
        <columns>rstkf__glbankacct_glacct__c</columns>
        <columns>rstkf__glbankacct_number__c</columns>
        <columns>rstkf__glbankacct_institution__c</columns>
        <columns>rstkf__glbankacct_bankcardacct__c</columns>
        <columns>rstkf__glbankacct_curr__c</columns>
        <columns>rstkf__glbankacct_currsupport__c</columns>
        <columns>rstkf__glbankacct_intexpfeestr__c</columns>
        <columns>rstkf__glbankacct_lstchecknumb__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glbankacct_currencies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbankacct_cmpno__c</field>
            <operation>equals</operation>
            <value>Mountain Manufacturing (100)</value>
        </filters>
        <label>P_View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Accounts</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankacct_cmpno__c</columns>
        <columns>rstkf__glbankacct_name__c</columns>
        <columns>rstkf__glbankacct_recontxntype__c</columns>
        <columns>rstkf__glbankacct_maskednumber__c</columns>
        <columns>rstkf__glbankacct_bankcardacct__c</columns>
        <columns>rstkf__glbankacct_institution__c</columns>
        <columns>rstkf__glbankacct_howreconciled__c</columns>
        <columns>rstkf__glbankacct_checkapplind__c</columns>
        <columns>rstkf__glbankacct_curr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glbankacct_lstchecknumb__c</columns>
        <columns>rstkf__glbankacct_glacct__c</columns>
        <columns>rstkf__glbankacct_amthome__c</columns>
        <columns>rstkf__glbankacct_cashapplind__c</columns>
        <filterScope>Everything</filterScope>
        <label>Bank Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Accounts_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankacct_cmpno__c</columns>
        <columns>rstkf__glbankacct_name__c</columns>
        <columns>rstkf__glbankacct_howreconciled__c</columns>
        <columns>rstkf__glbankacct_number__c</columns>
        <columns>rstkf__glbankacct_bankcardacct__c</columns>
        <columns>rstkf__glbankacct_curr__c</columns>
        <columns>rstkf__glbankacct_amthome__c</columns>
        <columns>rstkf__glbankacct_lstchecknumb__c</columns>
        <columns>rstkf__glbankacct_glacct__c</columns>
        <columns>rstkf__glbankacct_ccapplind__c</columns>
        <columns>rstkf__glbankacct_cashapplind__c</columns>
        <columns>rstkf__glbankacct_eftapplind__c</columns>
        <columns>rstkf__glbankacct_checkapplind__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbankacct_cmpno__c</field>
            <operation>contains</operation>
            <value>SB</value>
        </filters>
        <label>Bank Accounts - Filtered</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>